# cc-simple-server

./: .gitignore  README.md  Vagrantfile  pyproject.toml  python.md  rubric.md  sqlite.md  vagrant.md
.github/workflows/: ci.yml
cc_simple_server/: database.py  models.py  server.py
tests/unit/: test_server.py
